--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<div class="touch-controls">
+  <button id="btn-left">◀</button>
+  <button id="btn-right">▶</button>
+  <button id="btn-action">🎯</button>
+</div>
   <script type="module" src="./walletconnect.js"></script>
   <script type="module" src="./main.js"></script>
 </body>
